test_data/Json/Unexpected/Unserializable/InvalidModelType/Submodel/wrong.json.exception
Expected the model type 'Submodel', but got soReallyUtterlyInvalid at: modelType